--- a/1index.html
+++ b/1index.html
@@ -319,6 +319,10 @@
                     class="mdui-list-item-icon mdui-icon material-icons">group</i>
                 <div class="mdui-list-item-content">BiliBili频道</div>
             </li>
+            <li class="mdui-list-item mdui-bilibili" onclick="window.open('https://www.ccw.site/student/5d08e95bb73fd803276dd7b2');"> <i
+                    class="mdui-list-item-icon mdui-icon material-icons">code</i>
+                <div class="mdui-list-item-content">共创世界</div>
+            </li>
             <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('fmkli@mail.fmkli.ga')"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">Email</div>
