--- a/1index.html
+++ b/1index.html
@@ -199,19 +199,6 @@
         </div>
 
     </div>
-    <!-- 音乐卡片 -->
-    <div class="mdui-card card">
-
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">听音乐awa</div>
-        </div>
-
-        <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">
-        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=4010198&auto=1&height=66"></iframe>
-        </div>
-
-    </div>
 
     <!-- 近期文章 -->
     <div class="mdui-card card">
@@ -368,22 +355,18 @@
     </div>
 
     <footer class="mdui-text-center">
-        <p>&copy; 2021 Fmkli</p><hr>
+        <p>&copy; 2021 Fmkli</p><br>
         <a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
         <p>本站由笨笨的Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
-        <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p><br>
-        <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
-        <br>
-        <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+        <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p><hr>
+        <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script><br>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=410 src="//music.163.com/outchain/player?type=1&id=405493&auto=1&height=430"></iframe>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js"
         integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
         crossorigin="anonymous"></script>
     <script src="home.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     <!--  -->
     <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
         <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
