--- a/1index.html
+++ b/1index.html
@@ -357,10 +357,9 @@
     <footer class="mdui-text-center">
         <p>&copy; 2021 Fmkli</p><br>
         <a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
-        <p>本站由笨笨的Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
+        <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
         <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p><hr>
-        <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script><br>
-        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=410 src="//music.163.com/outchain/player?type=1&id=405493&auto=1&height=430"></iframe>
+        <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js"
