--- a/1index.html
+++ b/1index.html
@@ -257,7 +257,7 @@
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">相关链接</li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/blog/'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">FmkliのBlog</div>
             </li>
