--- a/1index.html
+++ b/1index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fmkli的站点</title>
-    <link rel="stylesheet" href="https://fmkli.js.org/mdui/css/mdui.min.css"
+    <link rel="stylesheet" href="https://fmkli.js.org/mdui2/css/mdui.min.css"
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
     <link rel="manifest" href="manifest.json">
@@ -342,7 +342,7 @@
         <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
     </footer>
 
-    <script src="https://fmkli.js.org/mdui/js/mdui.min.js"
+    <script src="https://fmkli.js.org/mdui2/js/mdui.min.js"
         integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
         crossorigin="anonymous"></script>
     <script src="home.js"></script>
