--- a/1index.html
+++ b/1index.html
@@ -317,7 +317,7 @@
             
             <li class="mdui-subheader">后台</li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga/wp-admin'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">add_to_queue</i>
                 <div class="mdui-list-item-content">Blogの后台</div>
             </li>
