--- a/1index.html
+++ b/1index.html
@@ -196,6 +196,7 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">叭叭~</br>重要公告<br>YOUNk扒主页66666666666666<br>
+        <p>乐子张大佬： <a href="https://ahdark.com/live/1240.shtml">AHdark的文章</a>——<a href="https://blog.ltya.top/event/214.html">岚天呀的文章</a> </p>
         </div>
 
     </div>
