--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <div class="rin-name">Fmkli</div>
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="1index.html">点我进入主页AWA</a><br>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="//fmkli.js.org/1index.html">点我进入主页AWA</a><br>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/">我的博客AWA</a>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://space.bilibili.com/543825809">我的B站</a>
 </main>
 <footer id="rin-footer">
+<div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
+    <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+</div>
     <div><a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
             ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
         </div>
