更新主页信息

--- a/1index.html
+++ b/1index.html
@@ -195,7 +195,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~</br>重要公告<br>YOUNk扒主页66666666666666<br>
+        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告：已经将博客迁移至WordPress<br>重要公告<br>YOUNk扒主页66666666666666<br>
         <p>乐子张大佬： <a href="https://ahdark.com/live/1240.shtml">AHdark的文章</a>——<a href="https://blog.ltya.top/event/214.html">岚天呀的文章</a> </p>
         </div>
 
@@ -206,27 +206,13 @@
 
         <div class="mdui-card-primary">
             <div class="mdui-card-primary-title">近期文章</div>
-            <div class="mdui-card-primary-subtitle">最近在 Fmkli 上发布的 5 瞎乱写文章</div>
+            <div class="mdui-card-primary-subtitle">Fmkli 发布的 5篇 瞎乱写文章和状态</div>
         </div>
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content" id="posts">
             <div id="posts-label" class="mdui-list"></div>
             <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
-        </div>
-
-    </div>
-        <!-- Game -->
-    <div class="mdui-card card">
-
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">休闲网页游戏</div>
-        </div>
-
-        <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">
-            <a href="https://fmkli.js.org/dino/">谷歌小恐龙(点我)</a><br>
-            <a href="https://fmkli.js.org/adarkroom/?lang=zh_cn">ADK(点我)</a><br>
         </div>
 
     </div>
@@ -336,7 +322,7 @@
     </div>
 
     <footer class="mdui-text-center">
-        <p>&copy; 2021 Fmkli</p><br>
+        <p>&copy; 2022 Fmkli</p><br>
         <a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
         <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
         <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p><hr>
