--- a/1index.html
+++ b/1index.html
@@ -154,7 +154,9 @@
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
             <center>挣扎在深处的小小网站</center><br><center>Fmkli的网站</center><br>
         </h2>
-        </center>
+        <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
+            <center>Fmkli祝大家新年快乐！</center><br>
+        </h1>
     </nav>
 
     <!-- 介绍卡片 -->
