--- a/1index.html
+++ b/1index.html
@@ -151,11 +151,8 @@
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
-        <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            <center>挣扎在深处的小小网站</center><br><center>Fmkli的网站</center><br>
-        </h2><br>
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            <center>Fmkli祝大家新年快乐！</center><br>
+            <center>Fmkli在此祝大家新年快乐！万事如意！</center><br><center>挣扎在深处的小小网站</center><br><center>Fmkli的网站</center><br>
         </h1>
     </nav>
 
