--- a/1index.html
+++ b/1index.html
@@ -171,7 +171,7 @@
         <div class="mdui-card-content mdui-typo"><img src="//bu.dusays.com/2021/08/27/ec457187a2a54.png" width="100" height="100"><br>蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看<a href="https://fmkli.js.org/blog/aboutme/">https://fmkli.js.org/blog/aboutme/</a></br>还请多多指教！
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
-            <br>你也可以通过邮箱找到我：<code>fmkli@mail.fmkli.ga</code>
+            <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
             <br>留言请去：<a href="https://fmkli.js.org/blog/yousay/">https://fmkli.js.org/blog/yousay/</a>
         </div>
 
