--- a/1index.html
+++ b/1index.html
@@ -173,6 +173,7 @@
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
             <br>留言请去：<a href="https://blog.fmkli.ga/留言板/">https://blog.fmkli.ga/留言板/</a>
+            <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
         </div>
 
     </div>
