--- a/1index.html
+++ b/1index.html
@@ -341,8 +341,8 @@
     <footer class="mdui-text-center">
         <p>&copy; 2022 Fmkli</p><br>
         <a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
-        <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
-        <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p><hr>
+        <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Vercel支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
+        <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p><hr>
         <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280386605'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280386605%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
     </footer>
 
