--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="//fmkli.js.org/1index.html">点我进入主页AWA</a><br>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/">我的博客AWA</a><br>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/links">友链</a><br>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://space.bilibili.com/543825809">我的B站</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/">我的博客AWA</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/links">友链</a>
 </main>
 <footer id="rin-footer">
 <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
