--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </main>
 <footer id="rin-footer">
 <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
-    <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+    <a href="https://myssl.com/imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
 </div>
     <div><a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
             ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
