--- a/1index.html
+++ b/1index.html
@@ -168,11 +168,11 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo"><img src="//bu.dusays.com/2021/08/27/ec457187a2a54.png" width="100" height="100"><br>蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看<a href="https://blog.fmkli.ga/关于我/">https://blog.fmkli.ga/关于我/</a></br>还请多多指教！
+        <div class="mdui-card-content mdui-typo"><img src="//bu.dusays.com/2021/08/27/ec457187a2a54.png" width="100" height="100"><br>蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看<a href="https://blog.imfmkli.top/关于我/">https://blog.imfmkli.top/关于我/</a></br>还请多多指教！
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
-            <br>留言请去：<a href="https://blog.fmkli.ga/留言板/">https://blog.fmkli.ga/留言板/</a>
+            <br>留言请去：<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>
             <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
         </div>
 
@@ -214,7 +214,7 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
-        Fmkli的博客的RRS：<a href="https://blog.fmkli.ga/feed">https://blog.fmkli.ga/feed</a><br>欢迎订阅
+        Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/feed</a><br>欢迎订阅
         </div>
 
     </div>
@@ -328,9 +328,8 @@
 
     <footer class="mdui-text-center">
         <p>&copy; 2022 Fmkli</p><br>
-        <a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
         <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Vercel支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
-        <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p><hr>
+        <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p>
     </footer>
 
     <script src="https://fmkli.js.org/mdui2/js/mdui.min.js"
