--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
     <a href="https://myssl.com/imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
 </div>
-    <div>
+    <div> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank">萌ICP备20221145号</a>
             ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
         </div>
 </footer>
