--- a/1index.html
+++ b/1index.html
@@ -328,6 +328,7 @@
 
     <footer class="mdui-text-center">
         <p>&copy; 2022 Fmkli</p><br>
+         <a href="https://icp.gov.moe/?keyword=20221145" target="_blank">萌ICP备20221145号</a><br>
         <p>本站由鸽子站长Fmkli搭建 - 由YFUN提供页面 - 由Vercel支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
         <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p>
     </footer>
