--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/index.css">
-    <link rel="icon" href="https://fmkli.js.org/Flysoft_files/fmkli.png">
+    <link rel="icon" href="https://www.imfmkli.top/Flysoft_files/fmkli.png">
 </head>
 <body>
 <div id="rin-bg"></div>
@@ -23,7 +23,7 @@
 <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
     <a href="https://myssl.com/imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
 </div>
-    <div> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank">萌ICP备20221145号</a>
+    <div> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank">萌ICP备20221145号</a><br>
             ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
         </div>
 </footer>
