--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main id="rin-main">
     <div id="rin-headimg"></div>
     <div class="rin-name">Fmkli</div>
-    <div class="rin-description">欢迎访问我的小站</div>
+    <div class="rin-description">域名换新拉！</div>
     <div class="rin-tr"></div>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="//imfmkli.top/1index.html">点我进入主页AWA</a><br>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga/">我的博客AWA</a>
