--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">相关链接</li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='//www.imfmkli.top'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">Fmkli</div>
             </li>
@@ -89,7 +89,7 @@
         crossorigin="anonymous"></script>
     <script src="/404.js"></script>
     <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
-        <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+        <a href="https://myssl.com/www.imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
     </div>
 </body>
 
