--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="mdui-list-item-content">随便说说</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://bbs.fmkli.ga'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://bbs.imfmkli.top'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
                 <div class="mdui-list-item-content">Fmkli的论坛</div>
             </li>
