--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
-            <li class="mdui-subheader">相关链接</li>
+            <li class="mdui-subheader">我的网站</li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.imfmkli.top'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
@@ -279,6 +279,11 @@
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkpan.herokuapp.com/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">input</i>
                 <div class="mdui-list-item-content">Fmkli的网盘</div>
+            </li>
+
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://uptime.imfmkli.top/'">
+                <i class="mdui-list-item-icon mdui-icon material-icons"></i>
+                <div class="mdui-list-item-content">Fmkli的探针</div>
             </li>
             
             <li class="mdui-subheader">随便弄得</li>
