--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://uptime.imfmkli.top/'">
-                <i class="mdui-list-item-icon mdui-icon material-icons"></i>
+                <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
                 <div class="mdui-list-item-content">Fmkli的探针</div>
             </li>
             
