--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <div class="mdui-list-item-content">Fmkli的网盘</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://stats.uptimerobot.com/4wP0ZtzRjZ'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://uptime.imfmkli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
                 <div class="mdui-list-item-content">Fmkli的探针</div>
             </li>
