--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed mdui-text-color-white">
         <div class="mdui-toolbar mdui-color-theme">
             <a href="javascript:;" class="mdui-btn mdui-btn-icon"
-                mdui-drawer="{target: '#left-drawer',overlay: true}"><i class="mdui-icon material-icons">menu</i></a>Fmkli</a>
+                mdui-drawer="{target: '#left-drawer',overlay: true}"><i class="mdui-icon material-icons">menu</i></a>Fmkli的鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
         </div>
     </div>
