--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
-            <br>留言可去：<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>，也可去下面说
+            <br>留言去：<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>
             <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
         </div>
 
@@ -342,25 +342,6 @@
     <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
         <a href="https://myssl.com/www.imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
     </div>
-<center><h2>虽然很奇怪，但是还是想挂个评论框</h2></center>
-<!-- 来必力City版安装代码 -->
-<div id="lv-container" data-id="city" data-uid="MTAyMC81MjI0OC8yODcyNw==">
-<script type="text/javascript">
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
-
-       if (typeof LivereTower === 'function') { return; }
-
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
-
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-</script>
-<noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
-</div>
-<!-- City版安装代码已完成 -->
 </body>
 
 </html>
