--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告：已经将博客迁移至WordPress<br>重要公告<br>域名换新<a href="/">imfmkli.xyz</a><br>
-        <p>乐子张大佬： <a href="https://ahdark.com/live/1240.shtml">AHdark的文章</a>——<a href="https://blog.ltya.top/event/214.html">岚天呀的文章</a> </p>
+        <div class="mdui-card-content mdui-typo">
+        <h4>域名换新<a href="http://www.imfmkli.top/">imfmkli.top</a><br></h4>
+        <p></p>
         </div>
 
     </div>
