--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
     <footer class="mdui-text-center">
         <p>&copy; 2022 Fmkli<br>
-         <a href="https://icp.gov.moe/?keyword=20221145" target="_blank">萌ICP备20221145号</a><br></p>
+         <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br></p>
         <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p>
     </footer>
 
