--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="mdui-list-item-content">网址导航</div>
             </li>
             
-            <li class="mdui-subheader">随便弄得</li>
+            <li class="mdui-subheader">好玩的</li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.open('https://dino.imfmkli.top');"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">games</i>
