--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="zh-CN">
 
 <head>
-    <meta http-equiv="keywords" content="fmkli的网站,fmkli的窝,fmkli.js.org">
+    <meta http-equiv="keywords" content="fmkli的网站,fmkli的窝,www.imfmkli.top">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I'm Fmkli</title>
-    <link rel="stylesheet" href="https://fmkli.js.org/mdui2/css/mdui.min.css"
+    <link rel="stylesheet" href="./mdui2/css/mdui.min.css"
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
     <link rel="manifest" href="manifest.json">
@@ -344,7 +344,7 @@
         <p>感谢<a href="https://yfun.top">YFun</a>送的此页面！</p>
     </footer>
 
-    <script src="https://fmkli.js.org/mdui2/js/mdui.min.js"
+    <script src="./mdui2/js/mdui.min.js"
         integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
         crossorigin="anonymous"></script>
     <script src="home.js"></script>
