--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
-    <link rel="stylesheet" href="https://cdn.w3cbus.com/library/mdui/1.0.2/css/mdui.min.css"/>
+    <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <style>
 
         #banner {
@@ -282,6 +282,6 @@
 			text-decoration:none;
 		}
 	</style>
-<script src="https://cdn.w3cbus.com/library/mdui/1.0.2/js/mdui.min.js"></script>
+<script src=".mdui/js/mdui.min.js"></script>
 </body>
 </html>
