--- a/index.html
+++ b/index.html
@@ -282,6 +282,6 @@
 			text-decoration:none;
 		}
 	</style>
-<script src=".mdui/js/mdui.min.js"></script>
+<script src="./mdui/js/mdui.min.js"></script>
 </body>
 </html>
