--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
-    <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
+    <link rel="stylesheet" href="https://cdn.w3cbus.com/library/mdui/1.0.2/css/mdui.min.css"/>
     <style>
 
         #banner {
@@ -36,7 +36,7 @@
 </head>
 <body onload="test()">
     <!-- 工具栏 -->
-    <div class="mdui-appbar mdui-appbar-fixed">
+    <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         <a href="javascript:;" class="mdui-typo-title">Fmkli的鸽子主页</a>
@@ -282,6 +282,6 @@
 			text-decoration:none;
 		}
 	</style>
-<script src="./mdui/js/mdui.min.js"></script>
+<script src="https://cdn.w3cbus.com/library/mdui/1.0.2/js/mdui.min.js"></script>
 </body>
 </html>
