--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
     <!-- 抽屉栏 -->
-    <div class="mdui-drawer mdui-drawer-close" id="left-drawer">
+    <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">我的网站</li>
