--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body onload="test()">
     <!-- 工具栏 -->
-    <div class="mdui-appbar">
+    <div class="mdui-appbar mdui-appbar-with-tab mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         <a href="javascript:;" class="mdui-typo-title">Fmkli的鸽子主页</a>
