--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     </script>
 </head>
-<body onload="test()">
+<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <!-- 工具栏 -->
-    <div class="mdui-appbar mdui-appbar-with-tab mdui-appbar-fixed">
+    <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         <a href="javascript:;" class="mdui-typo-title">Fmkli的鸽子主页</a>
