--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         </div>
-        <div class="mdui-tab mdui-color-cyan" mdui-tab>
+        <div class="mdui-tab mdui-color-cyan mdui-tab-centered" mdui-tab>
         <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
         <a href="#tab2" class="mdui-ripple mdui-ripple-white">更多</a>
         <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
