--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
 
         #banner {
-            background-image: url("https://q2.a1pic.cn/2021/12/23/IYXs.jpg");
+            background-image: url("https://api.szfx.top/bing/api");
             background-size:cover;
             background-repeat:no-repeat;
             background-attachment:fixed;
@@ -53,7 +53,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站，往下翻！<br>图片地点：天目湖
+            欢迎访问Fmkli的网站，往下翻！<br>图片来自必应美图
         </h1>
     </nav>
 
