--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
 
         #banner {
-            background-image: url("https://image.jishusongshu.com/bing/15-Jan-2022/15-Jan-2022.jpg");
+            background-image: url("https://q3.a1pic.cn/2022/01/15/yA6e.png");
             background-size:cover;
             background-repeat:no-repeat;
             background-attachment:fixed;
