--- a/index.html
+++ b/index.html
@@ -5,34 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-    <style>
 
-        #banner {
-            background-image: url("https://q3.a1pic.cn/2022/01/15/yA6e.png");
-            background-size:cover;
-            background-repeat:no-repeat;
-            background-attachment:fixed;
-            background-position: center center;
-            height: 100vh;
-            width: 100%;
-            /* filter: brightness(0.8);
-            -webkit-filter: brightness(0.8);
-            -moz-filter: brightness(0.8);
-            -o-filter:  brightness(0.8);
-            -ms-filter:  brightness(0.8); */
-        }
-        .banner-title {
-            font-weight: 400;
-            filter: brightness(1.3);
-            -webkit-filter: brightness(1.3);
-            -moz-filter: brightness(1);
-            -o-filter:  brightness(1);
-            -ms-filter:  brightness(1);
-        }
-    </style>
-    <script>
-
-    </script>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <!-- 工具栏 -->
@@ -68,7 +41,7 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-                    <p>本主页由Fmkli使用mdui框架制作，使用了一些Yfun的主页css代码，谢谢！<br>
+                    <p>本主页由Fmkli使用mdui框架制作<br>
                     蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看关于页面</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过BiliBili<a
                         href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
