--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-
+    <style>
+        body
+        {
+        background-image:url('https://q3.a1pic.cn/2022/01/15/yA6e.png');
+        background-repeat:repeat-x;
+        } 
+    </style>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <!-- 工具栏 -->
