--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站，往下翻！<br>图片来自必应美图
+            欢迎访问Fmkli的网站<br>背景图片来自必应美图
         </h1>
     </nav>
 
