--- a/index.html
+++ b/index.html
@@ -252,15 +252,21 @@
         }
     </script>
     <footer class="mdui-text-center">
-        <p>&copy; 2022 Fmkli<br></p>
+        <p class="fmkli">&copy; 2022 Fmkli<br></p>
         <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a></p><br>
     </footer>
     <style type="text/css">
-		.a-p {
-			color:black;
-			text-decoration:none;
-		}
-	</style>
+	.fmkli {
+		color:red;
+		text-decoration:none;
+	}
+    </style>
+    <style type="text/css">
+	.a-p {
+		color:red;
+		text-decoration:none;
+	}
+    </style>
 <script src="./mdui/js/mdui.min.js"></script>
 </body>
 </html>
