--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="javascript:;" class="mdui-typo-title">Fmkli的鸽子主页</a>
+        <a href="javascript:;" class="mdui-typo-title">Fmkli</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-        <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         </div>
         <div class="mdui-tab mdui-color-cyan mdui-tab-centered" mdui-tab>
         <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
