--- a/index.html
+++ b/index.html
@@ -250,9 +250,18 @@
             });
         }
     </script>
+    <br>
     <footer class="mdui-text-center">
-        <p class="fmkli">&copy; 2022 Fmkli<br></p>
-        <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a></p><br>
+        <!-- 末尾卡片 -->
+        <div class="mdui-card card">
+            <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title mdui-center">&copy; 2022 Fmkli</div>
+            </div>
+            <!-- 卡片的内容 -->
+            <div class="mdui-card-content mdui-typo mdui-center">
+                <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a></p><br>
+            </div>
+        </div>
     </footer>
     <style type="text/css">
 	.fmkli {
