--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-    <style>
-        body
-        {
-        background-image:url('https://q3.a1pic.cn/2022/01/15/yA6e.png');
-        background-repeat:repeat-x;
-        } 
-    </style>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
+    <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
