--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="mdui-card-content mdui-typo">
                     <!-- 来必力City版安装代码 -->
                     <div id="lv-container" data-id="city" data-uid="MTAyMC81MjI0OC8yODcyNw==">
-                        <script type="text/javascript">
+                        <script type="text/javascript" defer="defer">
                         (function(d, s) {
                             var j, e = d.getElementsByTagName(s)[0];
                 
