--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站<br>背景图片来自必应美图
+            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！
         </h1>
     </nav>
 
@@ -272,21 +272,6 @@
             mdui.snackbar({
                 message: '欢迎光临！'
             });
-	    mdui.dialog({
-                title: '新年快乐！',
-                content: '建站两周年啦！<br>感谢支持！',
-                buttons: [
-                {
-                    text: '取消'
-                },
-                {
-                    text: '确认',
-                    onClick: function () {
-                    mdui.alert('好耶！');
-                    }
-                }
-                ]
-            })
         }
     </script>
     <br>
