--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
                 <div class="mdui-list-item-content">Fmkliの论坛</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#exampleDialog'}>
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://awa.imfmkli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
-                <div class="mdui-list-item-content">FK的即时通讯</div>
+                <div class="mdui-list-item-content">FK的即时通讯（手机）</div>
             </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkpan.herokuapp.com/'">
