--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
             <!-- 卡片的内容 -->
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a></p><br>
+		    <span class="footer-icp"><img class="ipc-icon" src="https://union.estu.site/UCP.png" alt="" width="20" height="20" ><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20226666</a></span>
             </div>
         </div>
     </footer>
@@ -309,6 +310,10 @@
     </style>
     <style type="text/css">
 	.a-p {
+		color:red;
+		text-decoration:none;
+	}
+	.icpgrass {
 		color:red;
 		text-decoration:none;
 	}
