--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
-    <noscript><p class="mdui-center">请开启JavaScript以让网站正常运行</p></noscript>
+    <noscript><p><center>请开启JavaScript以让网站正常运行</center></p></noscript>
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
