--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
-    <noscript><p><center>请开启JavaScript以让网站正常运行</center></p></noscript>
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -27,7 +26,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！
+            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
         </h1>
     </nav>
 
