--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
+<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-theme-accent-pink">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -24,6 +24,7 @@
         <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
         </div>
     </div>
+	
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
             欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
@@ -82,6 +83,7 @@
 
             </div>
         </div>
+	
         <div id="tab2">
             <br>
             <!-- 公告 -->
@@ -113,6 +115,7 @@
             </div>
 
         </div>
+	
         <div id="tab3">
             <br>
             <!-- 关于卡片 -->
@@ -141,6 +144,7 @@
 
             </div>
         </div>
+
 	<div id="tab4">
             <!-- 留言卡片 -->
             <div class="mdui-card card">
@@ -255,6 +259,11 @@
             </li>
          </ul>
     </div>
+    <!--右侧菜单-->
+    <div class="mdui-drawer mdui-drawer-right" id="right-drawer">
+	<p>神秘的右侧菜单</p>
+    </div>
+
     <!-- 注意 -->
     <div class="mdui-dialog" id="exampleDialog">
       <div class="mdui-dialog-title">本站只能手机访问！</div>
@@ -289,6 +298,7 @@
         }
     </script>
     <br>
+
     <footer class="mdui-text-center">
         <!-- 末尾卡片 -->
         <div class="mdui-card card">
@@ -302,6 +312,7 @@
             </div>
         </div>
     </footer>
+
     <style type="text/css">
 	.fmkli {
 		color:red;
@@ -318,6 +329,12 @@
 		text-decoration:none;
 	}
     </style>
+
+    <!--右下角按钮-->
+    <button class="mdui-fab mdui-fab-fixed mdui-ripple" mdui-drawer="{target: '#right-drawer'}">
+	<i class="mdui-icon material-icons">add</i>
+    </button>
+
 <script src="./mdui/js/mdui.min.js"></script>
 </body>
 </html>
