--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-theme-accent-pink">
+<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-theme-accent-pink mdui-drawer-body-right">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
