--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-theme-accent-pink ">
+<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -259,10 +259,6 @@
             </li>
          </ul>
     </div>
-    <!--右侧菜单-->
-    <div class="mdui-drawer mdui-drawer-right" id="right-drawer">
-	<p>神秘的右侧菜单</p>
-    </div>
 
     <!-- 注意 -->
     <div class="mdui-dialog" id="exampleDialog">
@@ -329,11 +325,6 @@
 		text-decoration:none;
 	}
     </style>
-
-    <!--右下角按钮-->
-    <button class="mdui-fab mdui-fab-fixed mdui-ripple" mdui-drawer="{target: '#right-drawer'}">
-	<i class="mdui-icon material-icons">add</i>
-    </button>
 
 <script src="./mdui/js/mdui.min.js"></script>
 </body>
