--- a/index.html
+++ b/index.html
@@ -326,6 +326,21 @@
 	}
     </style>
 
+<!--右下方小按钮-->
+    <div class="mdui-fab-wrapper" mdui-fab>
+        <button  class="mdui-fab mdui-ripple mdui-color-theme-accent">
+            <i class="mdui-icon material-icons" >apps</i>
+            <a href="https://blog.imfmkli.top/wp-admin/post-new.php"><i class="mdui-icon mdui-fab-opened material-icons" >add</i></a>
+        </button>
+        <div class="mdui-fab-dial">
+            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-pink">
+                <a href="https://blog.imfmkli.top/wp-admin"><i class="mdui-icon material-icons">mode_edit</i></a>
+            </button>
+            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-red">
+                <a href="https://say.fmkli.workers.dev/"><i class="mdui-icon material-icons">bookmark</i></a>
+            </button>
+        </div>
+    </div>
 <script src="./mdui/js/mdui.min.js"></script>
 </body>
 </html>
