--- a/index.html
+++ b/index.html
@@ -51,23 +51,7 @@
                     <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
                 </div>
             </div>
-
-            <br>
-            <!-- 诗词卡片 -->
-            <div class="mdui-card card">
-
-                <div class="mdui-card-primary">
-                    <div id="hitokoto_from" class="mdui-card-primary-title">诗词获取中！</div>
-                </div>
-
-                <!-- 卡片的内容 -->
-                <div class="mdui-card-content mdui-typo">
-                    <!-- 请注意，以下的示例包含超链接，您可能需要手动配置样式使其不变色。如果您嫌麻烦，可以移除。 -->
-                        <p id="hitokoto"><a href="#" id="hitokoto_text">:D 获取中...</a></p></center>
-                    <!-- 以下写法，选取一种即可 -->
-                </div>
-
-            </div>
+	    
             <br>
             <!-- 提示 -->
             <div class="mdui-card card">
@@ -100,6 +84,37 @@
                 </div>
             </div>
             <br>
+	    <!-- 诗词卡片 -->
+            <div class="mdui-card card">
+
+                <div class="mdui-card-primary">
+                    <div id="hitokoto_from" class="mdui-card-primary-title">诗词获取中！</div>
+                </div>
+
+                <!-- 卡片的内容 -->
+                <div class="mdui-card-content mdui-typo">
+                    <!-- 请注意，以下的示例包含超链接，您可能需要手动配置样式使其不变色。如果您嫌麻烦，可以移除。 -->
+                        <p id="hitokoto"><a href="#" id="hitokoto_text">:D 获取中...</a></p></center>
+                    <!-- 以下写法，选取一种即可 -->
+                </div>
+
+            </div>
+	
+	    <!-- 笑话卡片 -->
+            <div class="mdui-card card">
+
+                <div class="mdui-card-primary">
+                    <div id="hitokoto_from" class="mdui-card-primary-title">笑到哮喘个屁的笑话</div>
+                </div>
+
+                <!-- 卡片的内容 -->
+                <div class="mdui-card-content mdui-typo">
+		    <script type="text/javascript" src="https://api.ghser.com/xiaohua?type=js">
+		    </script><script>ishan()</script>
+                </div>
+
+            </div>
+	
             <!-- RRS -->
             <div class="mdui-card card">
 
