--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 </div>
 
             </div>
+	    <br>	
 	
 	    <!-- 笑话卡片 -->
             <div class="mdui-card card">
@@ -109,12 +110,12 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-		    <script type="text/javascript" src="https://api.ghser.com/xiaohua?type=js">
+		    <script async type="text/javascript" src="https://api.ghser.com/xiaohua?type=js">
 		    </script><script>ishan()</script>
                 </div>
 
             </div>
-	
+	    <br>	
             <!-- RRS -->
             <div class="mdui-card card">
 
