--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><img class="ipc-icon" src="https://union.estu.site/UCP.png" alt="" width="20" height="20" ><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span></p>
+		    <center><img alt="ip签名图片" src="https://www.ipip5.com/ipimg"></center>
             </div>
         </div>
     </footer>
