--- a/index.html
+++ b/index.html
@@ -153,18 +153,21 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
+		    <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="buttonClick();">加载留言系统</button>
 		    <!--留言-->
                     <div id="tcomment"></div>
                     <script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
                     <script>
-                    twikoo.init({
-                      envId: 'https://talk-dusky.vercel.app/',
-                      el: '#tcomment',
-                      // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数
-                      // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
-                      // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
-                    })
-                    </script>
+                        function buttonClick(){
+                            twikoo.init({
+                	    envId: 'https://talk-dusky.vercel.app/',
+                	    el: '#tcomment',
+               		    // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数
+               		    // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
+                 	    // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
+            		    })
+  		 	 }
+		    </script>
 		    <!--留言-->
                 </div>
             </div>
@@ -255,15 +258,6 @@
          </ul>
     </div>
 
-    <!-- 注意 -->
-    <div class="mdui-dialog" id="exampleDialog">
-      <div class="mdui-dialog-title">本站只能手机访问！</div>
-      <div class="mdui-dialog-content">你确认吗？</div>
-      <div class="mdui-dialog-actions">
-        <button class="mdui-btn mdui-ripple" mdui-dialog-close>不行</button>
-        <button href="https://awa.imfmklit.top" class="mdui-btn mdui-ripple" mdui-dialog-confirm>确认！</button>
-      </div>
-    </div>
 
     <div>
         <!-- 现代写法，推荐(不支持 IE) -->
