--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="buttonClick();" id="jiazai">加载留言系统</button></center>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统</button></center>
 		    <!--留言-->
                     <div id="tcomment"></div>
                     <script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
