--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/HexoPlusPlus/HexoPlusPlus@1.2.0/talk.css"> 
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
@@ -22,6 +23,7 @@
         <a href="#tab2" class="mdui-ripple mdui-ripple-white">更多</a>
         <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
         <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
+        <a href="#tab6" class="mdui-ripple mdui-ripple-white">说说</a>
         </div>
     </div>
 	
@@ -173,6 +175,28 @@
                 </div>
             </div>
 	</div>
+	<div id="#tab5">
+	    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickss();" id="jiazaiss">加载说说</button></center>
+	    <!-- 引用 HexoPlusPlus_Talk组件 -->
+	    <script src="https://cdn.jsdelivr.net/gh/HexoPlusPlus/HexoPlusPlus@1.2.0/talk_user.js"></script>
+	    <!-- 创建HexoPlusPlus_Talk容器 -->
+	    <div id="hpp_talk"></div>
+	    <!-- 激活HexoPlusPlus_Talk -->
+	    <script>
+		function buttonClickss(){
+	     	    new hpp_talk({
+	    	    id:"hpp_talk",//容器id
+       	    	    domain: "say.fmkli.workers.dev/",//您的HexoPlusPlus域名，如admin.cyfan.top
+	    	    limit: 10,//单次获取的最多条数
+	   	    start: 0,//从第几条开始
+	  	    //themecss: "" //自定义说说主题，可选【仅1.1.0版本及以上使用】
+	            });
+	    </script>
+	    <p>嘿嘿嘿，HPP魔改亿下（<span class="heimu">不就是去掉其他的按钮嘛</span>），就成了有后台的说说啦！<br>
+	    （大佬别打我）<br>
+	    后台：<a href="https://say.fmkli.workers.dev/">https://say.fmkli.workers.dev/</a></p><br>
+	    <h4>问：为什么看不到说说？答：请检查是否能访问<a href="//cdn.jsdelivr.net"> cdn.jsdelivr.net </a>不能访问则无法显示说说</h4>
+	</tab>
     </div>
 
 
