--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
                 </div>
             </div>
 	</div>
-	<div id="#tab5">
-	    <!-- 留言卡片 -->
+
+	<div id="tab5">
+            <!-- 说说卡片 -->
             <div class="mdui-card card">
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">说说</div>
@@ -206,8 +207,8 @@
                 </div>
             </div>
 	</div>
-	</tab>
-    </div>
+</div>
+
 
 
     <!-- 抽屉栏 -->
