--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#tab2" class="mdui-ripple mdui-ripple-white">更多</a>
         <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
         <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
-        <a href="#tab6" class="mdui-ripple mdui-ripple-white">说说</a>
+        <a href="#tab5" class="mdui-ripple mdui-ripple-white">说说</a>
         </div>
     </div>
 	
@@ -182,7 +182,7 @@
             <div class="mdui-card card">
 
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">关于我</div>
+                    <div class="mdui-card-primary-title">说说</div>
                 </div>
 
                 <!-- 卡片的内容 -->
