--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 	    		<!-- 激活HexoPlusPlus_Talk -->
 	    		<script>
 				function buttonClickss(){
+			    	    jiazaiss.style.display = "none";
 	     	  	  	    new hpp_talk({
 	    		        	id:"hpp_talk",//容器id
        	    		        	domain: "say.fmkli.workers.dev/",//您的HexoPlusPlus域名，如admin.cyfan.top
