--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
         <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
         <a href="#tab5" class="mdui-ripple mdui-ripple-white">说说</a>
+        <a href="#tab6" class="mdui-ripple mdui-ripple-white">博客</a>
         </div>
     </div>
 	
@@ -213,6 +214,25 @@
 
             </div>
         </div>
+
+	<div id="tab6">
+	    <!-- 近期文章 -->
+    	    <div class="mdui-card card">
+
+        	<div class="mdui-card-primary">
+            	    <div class="mdui-card-primary-title">近期文章</div>
+           	    <div class="mdui-card-primary-subtitle">最近在 Fmkli 上发布的 5 瞎乱写文章</div>
+      	        </div>
+
+        	<!-- 卡片的内容 -->
+        	<div class="mdui-card-content" id="posts">
+                    <div id="posts-label" class="mdui-list"></div>
+                    <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
+                </div>
+
+            </div>
+	
+	</div>
 </div>
 
 
@@ -362,5 +382,6 @@
 
 
 <script src="./mdui/js/mdui.min.js"></script>
+<script src="./home.js"></script>
 </body>
 </html>
